--- a/Proyecto/Moodle/nbproject/project.properties
+++ b/Proyecto/Moodle/nbproject/project.properties
@@ -43,7 +43,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
