--- a/Proyecto/Moodle/nbproject/project.properties
+++ b/Proyecto/Moodle/nbproject/project.properties
@@ -28,8 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.json-simple-1.1.jar=C:\\Users\\navi_\\Downloads\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-1=C:\\Users\\MAYRA\\Downloads\\json-simple-1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,8 +45,7 @@ javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.json-simple-1.1.jar}:\
-    ${file.reference.json-simple-1.1.jar-1}
+    ${libs.Json.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
