View Question Interaction

--- a/Proyecto/Moodle/nbproject/project.properties
+++ b/Proyecto/Moodle/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.struts2-json-plugin-2.3.24.1.jar=C:\\Users\\luis_\\Documents\\NetBeansProjects\\Struts2Ajax\\struts2-json-plugin-2.3.24.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +46,8 @@ javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.Json.classpath}
+    ${libs.Json.classpath}:\
+    ${file.reference.struts2-json-plugin-2.3.24.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
