Delete unused imports

--- a/Proyecto/Moodle/nbproject/project.properties
+++ b/Proyecto/Moodle/nbproject/project.properties
@@ -44,10 +44,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
-    ${libs.hibernate4-support.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.Json.classpath}:\
-    ${file.reference.jdom-2.0.6.jar}
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
