--- a/Proyecto/Moodle/nbproject/project.properties
+++ b/Proyecto/Moodle/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.jdom-2.0.6.jar=jdom-2.0.6.jar
+file.reference.json-simple-1.1.jar=json-simple-1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +47,8 @@ javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jdom-2.0.6.jar}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
