--- a/Proyecto/Moodle/nbproject/project.properties
+++ b/Proyecto/Moodle/nbproject/project.properties
@@ -48,8 +48,7 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jdom-2.0.6.jar}:\
     ${libs.hibernate4-persistence.classpath}:\
-    ${file.reference.json-simple-1.1.jar}:\
-    ${libs.Json.classpath}
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
